--- a/index.html
+++ b/index.html
@@ -86,38 +86,51 @@
         }
 
         /* Loading style */
-        .loading {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(18, 18, 18, 0.9);
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-            backdrop-filter: blur(5px);
-        }
+.loading {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(18, 18, 18, 0.9);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    backdrop-filter: blur(5px);
+}
 
-        .loader {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            background-color: #0072ff;
-            animation: pulse-animation 2s infinite;
-            box-shadow: 0 0 0 0 rgba(0, 114, 255, 0.5);
-        }
+.loader {
+    width: 120px;
+    height: 22px;
+    border-radius: 40px;
+    color: #0072ff; /* Warna diganti sesuai preferensi */
+    border: 2px solid;
+    position: relative;
+    overflow: hidden;
+}
 
-        @keyframes pulse-animation {
-            0% {
-                box-shadow: 0 0 0 0px rgba(0, 114, 255, 0.5);
-            }
+.loader::before {
+    content: "";
+    position: absolute;
+    margin: 2px;
+    width: 14px;
+    top: 0;
+    bottom: 0;
+    left: -20px;
+    border-radius: inherit;
+    background: currentColor;
+    box-shadow: -10px 0 12px 3px currentColor;
+    clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%, -30px 50%);
+    animation: l14 1s infinite linear;
+}
 
-            100% {
-                box-shadow: 0 0 0 20px rgba(0, 114, 255, 0);
-            }
-        }
+@keyframes l14 {
+    100% {
+        left: calc(100% + 20px);
+    }
+}
+
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
@@ -169,6 +182,7 @@
             document.getElementById('loading').style.display = 'flex'; // Tampilkan efek loading
             setTimeout(function () {
                 window.location.href = 'https://chat.whatsapp.com/ByxxRvrZMz88bcTQ8LGBgY'; // Redirect setelah 3 detik
+              document.getElementById('loading').style.display = 'none';
             }, 3000);
         });
     </script>
