--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             event.preventDefault(); // Mencegah default link
             document.getElementById('loading').style.display = 'flex'; // Tampilkan efek loading
             setTimeout(function () {
-                window.location.href = 'https://chat.whatsapp.com/ByxxRvrZMz88bcTQ8LGBgY'; // Redirect setelah 3 detik
+                window.location.href = 'https://wa.me/6287740175435?text=.confess'; // Redirect setelah 3 detik
               document.getElementById('loading').style.display = 'none';
             }, 3000);
         });
