--- a/index.html
+++ b/index.html
@@ -157,6 +157,20 @@
                 font-size: 0.9rem; /* Ukuran font lebih kecil di perangkat sangat kecil */
             }
         }
+      
+      .btn-join-group {
+    color: #ffffff; /* Teks berwarna putih */
+    font-size: 0.9rem; /* Ukuran font kecil */
+    text-decoration: none; /* Hilangkan garis bawah */
+    margin-top: 10px; /* Jarak dari tombol sebelumnya */
+    padding: 5px 10px;
+    display: inline-block;
+}
+
+.btn-join-group:hover {
+    color: #cccccc; /* Warna teks saat hover */
+}
+
     </style>
 </head>
 
@@ -167,6 +181,10 @@
         <a href="#" id="join-button" class="btn btn-custom">
             Get Started <i class="fas fa-arrow-right"></i>
         </a>
+      <a href="https://chat.whatsapp.com/CvY5sQ0jJku3SzVlfGpVzo" class="btn-join-group">
+    Join Group
+</a>
+
     </div>
 
     <div class="loading" id="loading">
